# 2d-gaussian-splatting

./: README.md  pyproject.toml
scripts/: __init__.py  convert.py  dtu_eval.py  m360_eval.py  metrics.py  nerf_eval.py  render.py  summary.py  tnt_eval.py  train.py  view.py
scripts/eval_dtu/: __init__.py  eval.py  evaluate_single_scene.py  render_utils.py
scripts/eval_tnt/: __init__.py  compute_bbox_for_mesh.py  config.py  cull_mesh.py  evaluate_single_scene.py  evaluation.py  help_func.py  plot.py  registration.py  run.py  trajectory_io.py  util.py
src/twodgs/: __init__.py
src/twodgs/arguments/: __init__.py
src/twodgs/gaussian_renderer/: __init__.py  network_gui.py
src/twodgs/scene/: __init__.py  cameras.py  colmap_loader.py  dataset_readers.py  gaussian_model.py
src/twodgs/scripts/: __init__.py  metrics.py  render.py  train.py  view.py
src/twodgs/scripts/eval_dtu/: __init__.py
src/twodgs/scripts/eval_tnt/: __init__.py  compute_bbox_for_mesh.py  cull_mesh.py  run.py
src/twodgs/utils/: __init__.py  camera_utils.py  general_utils.py  graphics_utils.py  image_utils.py  loss_utils.py  mcube_utils.py  mesh_utils.py  point_utils.py  render_utils.py  system_utils.py
